infrastructure/dev/mlflow/mlflow-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow-loadbalancer
  namespace: mlflow
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: mlflow
    app.kubernetes.io/instance: mlflow
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
    name: http
